# trip-planner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  angular.json  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
.github/workflows/: deploy.yml  publish-frontend.yml  publish-server.yml
dbeaver/: create_users_and_db.sql  grant_privileges.sql
examples/: japan-cherry-blossom-2026.json
public/: config.js
scripts/: generate-env.mjs
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/app/: config.py  db.py  main.py  models.py  routes.py
src/: index.html  styles.scss
src/app/: app.config.ts  app.routes.ts  app.spec.ts
src/app/models/: migrations.spec.ts  migrations.ts  trip.model.ts
src/app/services/: export.service.ts  http-trip-store.ts  import-export.service.ts  indexeddb-trip-store.ts  time-zone.service.ts  trip-actions.service.ts  trip-store-util.ts  trip-store.service.ts  trip-store.ts
src/app/shared/: download.ts  transport-format.ts
src/app/shared/color/: color-field.scss  color-field.ts  color.ts
src/app/shared/confirm-dialog/: confirm-dialog.ts
src/app/shared/cost/: cost-fieldset.html  cost-fieldset.spec.ts  cost-fieldset.ts  cost.spec.ts  cost.ts
src/app/shared/date-field/: date-field.ts
src/app/shared/export/: anonymize.spec.ts  anonymize.ts  trip-markdown.spec.ts  trip-markdown.ts
src/app/shared/suggest-field/: suggest-field.ts
src/app/shared/timezone-select/: timezone-select.ts
src/app/trips/export/: export-host.ts  (+4 more)
src/environments/: environment.ts
(+58 files in other folders)
