[project]
name = "trip-planner-api"
version = "0.1.0"
description = "FastAPI + PostgreSQL backend for the Trip Planner app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
